--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,16 @@ body {
 	color:rgba(0,0,0,.35);
 	float:right;
 }
+
+#profileContainer {
+	color: white;
+}
+
+/* #contact-name {
+	color: white;
+} */
+
+#allInput {
+	color: white;
+}
+
